--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="" class="nav__logo">Syamimi</a>
+                <a href="" class="nav__logo">Syamimi Raihanah</a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list grid">
@@ -102,9 +102,10 @@
                         </div>
 
                         <div class="home__data">
-                            <h1 class="home__title">Hi, I am Syamimi Raihanah</h1>
-                            <h3 class="home__subtitle">Computer Science Fresh Graduate</h3>
-                            <p class="home__description">Interested in learning new technology, languages and frameworks</p>
+                            <h2 class="home__title">Hi, I am</h2>
+                            <h2 class="home__title__2">Syamimi Raihanah</h2>
+                            <h3 class="home__subtitle">Fresh Graduate</h3>
+                            <p class="home__description">A self-motivated, determined and productive programmer with a passion for creative solutions</p>
                             <a href="#contact" class="button button--flex">
                                 Contact Me <i class="uil uil-message button__icon"></i>
                             </a>
@@ -129,7 +130,7 @@
                     <img src="assets/img/about.png" alt="" class="about__img">
                     
                     <div class="about__data">
-                        <p class="about__description">Web developer, with extensive experience, working in web technologies and UI/UX designer</p>
+                        <p class="about__description">adept in software development and keen to learn new technology, frameworks and languages.capable of effectively self-managing during independent projects as well as collaborating as a productive team member.Web developer, with extensive experience, working in web technologies and UI/UX designer</p>
                         
                         <div class="about__info">
                             <div>
