--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                                         <span class="skills__number">60%</span>
                                     </div>
                                     <div class="skills__bar">
-                                        <span class="skills__percentage skills__mysql"></span>
+                                        <span class="skills__percentage skills__laravel"></span>
                                     </div>
                                 </div>
 
@@ -271,7 +271,7 @@
                                         <span class="skills__number">60%</span>
                                     </div>
                                     <div class="skills__bar">
-                                        <span class="skills__percentage skills__oracle"></span>
+                                        <span class="skills__percentage skills__bootstrap"></span>
                                     </div>
                                 </div>
 
@@ -281,7 +281,7 @@
                                         <span class="skills__number">30%</span>
                                     </div>
                                     <div class="skills__bar">
-                                        <span class="skills__percentage skills__sqlite"></span>
+                                        <span class="skills__percentage skills__django"></span>
                                     </div>
                                 </div>
 
@@ -353,7 +353,7 @@
                                 <i class="uil uil-swatchbook skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__title">Designer</h1>
+                                    <h1 class="skills__title">Designs</h1>
                                     <!--<span class="skills__subtitle">More thank 1 years</span>-->
                                 </div>
 
@@ -364,7 +364,7 @@
                                 <div class="skills__data">
                                     <div class="skill__titles">
                                         <h3 class="skills__name">Photoshop</h3>
-                                        <span class="skills__number">80%</span>
+                                        <span class="skills__number">55%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__photoshop"></span>
@@ -374,7 +374,7 @@
                                 <div class="skills__data">
                                     <div class="skill__titles">
                                         <h3 class="skills__name">Illustrator</h3>
-                                        <span class="skills__number">50%</span>
+                                        <span class="skills__number">35%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__illustrator"></span>
@@ -421,8 +421,8 @@
                             <!--==================== QUALIFICATION 1 ====================-->
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Diploma Computer Science</h3>
-                                    <span class="qualification__subtitle">Peru - University</span>
+                                    <h3 class="qualification__title">Diploma in Computer Science</h3>
+                                    <span class="qualification__subtitle"></span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
                                         2010 - 2013
