--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <title>Syamimi Raihanah</title>
+        <link rel="icon" type="image/x-icon" href="/assets/img/syem.png">
     </head>
     <body>
         <!--==================== HEADER ====================-->
@@ -609,8 +610,8 @@
                                     <b>Framework: </b>Laravel, Bootstrap
                                     <br><b>Languages: </b>HTML, Javascript, CSS, PHP
                                     <br><b>Database: </b>MySQL
-                                    <br><i class="uil uil-check"></i> A system to record athlete performance
-                                    <br><i class="uil uil-check"></i> Registration, login and logout function
+                                    <br><i class="uil uil-check"></i> A web-based system to record athlete performance
+                                    <br><i class="uil uil-check"></i> Registration / login function
                                     <br><i class="uil uil-check"></i> CRUD function for staff and admin
                                     <br><i class="uil uil-check"></i> Graph of athlete performance using DataTables
                                 </p>
@@ -728,7 +729,7 @@
                     </div>
                 </div>
 
-                <p class="footer__copy">&#169; Syemrai. All right reserved</p>
+                <p class="footer__copy">&#169; syemrai. All right reserved</p>
             </div>
         </footer>
         
