--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <title>Syamimi Raihanah</title>
-        <link rel="icon" type="image/x-icon" href="/assets/img/syem.png">
+        <link rel="icon" type="image/x-icon" href="/assets/img/logo.png">
     </head>
     <body>
         <!--==================== HEADER ====================-->
@@ -354,7 +354,7 @@
                                 <i class="uil uil-swatchbook skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__title">Designs</h1>
+                                    <h1 class="skills__title">Multimedia</h1>
                                     <!--<span class="skills__subtitle">More thank 1 years</span>-->
                                 </div>
 
@@ -499,7 +499,7 @@
                             
     
                                 <div>
-                                    <h3 class="qualification__title">Software Developer Intern</h3>
+                                    <h3 class="qualification__title">Web Developer Intern</h3>
                                     <span class="qualification__subtitle">Universiti Teknologi MARA, Shah Alam</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
@@ -586,12 +586,12 @@
                             <img src="assets/img/portfolio3.jpg" alt="" class="portfolio_img">
 
                             <div class="portfolio__data">
-                                <h3 class="portfolio__title">Mobile Application</h3>
+                                <h3 class="portfolio__title">My Personal Application</h3>
                                 <p class="portfolio__description">
                                     <b>Tools: </b>Android Studio
                                     <br><b>Languages: </b>Java
-                                    <br><i class="uil uil-check"></i> Personal porfolio mobile application
-                                    <br><i class="uil uil-check"></i> Suitable for android 4.0 above
+                                    <br><i class="uil uil-check"></i> An Android application
+                                    <br><i class="uil uil-check"></i> Suitable for Android mobile devices
                                 </p>
                                 <a href="" class="button button--flex button--small portfolio__button">
                                     Github
