--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </center>
         </main>
 
         <!--==================== FOOTER ====================-->
