--- a/index.html
+++ b/index.html
@@ -636,25 +636,18 @@
                 <h2 class="section__title">Contact Me</h2>
                 <span class="section__subtitle">Get In Touch</span>
 
-                <div class="contact__container container grid">
+                <div class="contact__container container">
                     <div>
                         <div class="contact__information">
                             <i class="uil uil-whatsapp contact__icon">&nbsp</i>
 
                             <div>
                                 <h3 class="contact__title">Text Me</h3>
-                                <span class="contact__subtitle">+60-195-449-719</span>
+                                <a href="https://wa.link/w5j9iw"><span class="contact__subtitle">+60-195-449-719</span></a>
                             </div>
                         </div>
 
-                        <div class="contact__information">
-                            <i class="uil uil-envelope-alt contact__icon">&nbsp</i>
-
-                            <div>
-                                <h3 class="contact__title">Email</h3>
-                                <span class="contact__subtitle">syamimiraihanah@gmail.com</span>
-                            </div>
-                        </div>
+                        
 
                         <div class="contact__information">
                             <i class="uil uil-map-marker contact__icon">&nbsp</i>
@@ -662,6 +655,14 @@
                             <div>
                                 <h3 class="contact__title">Location</h3>
                                 <span class="contact__subtitle">Sungai Petani, Kedah</span>
+                            </div>
+                        </div>
+                        <div class="contact__information">
+                            <i class="uil uil-envelope-alt contact__icon">&nbsp</i>
+
+                            <div>
+                                <h3 class="contact__title">Email</h3>
+                                <a href="mailto:<gmail>syamimiraihanah@gmail.com"><span class="contact__subtitle" >syamimiraihanah@gmail.com</span></a>
                             </div>
                         </div>
                     </div>
